[project]
name = "vllm-paligemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "safetensors>=0.5.3",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
]
